# sage-archive-2023-02-01

./: .BUILDSTART  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod-command.sh  .gitpod-init.sh  .gitpod-setup-trac-remote.sh  .gitpod.yml  .hgignore  .homebrew-build-env  .lgtm.yml  .zenodo.json  .zenodo.json.in  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.txt  ClassDegenerateMetric.ipynb  Makefile  Makefile.am  Pipfile.m4  README.md  README.txt  TODO  VERSION.txt  __init__.py  augmented_valuation.py  bootstrap  bootstrap-conda  cluster_algebra.py  condarc.yml  configure 2  configure.ac  developing_valuation.py  discrete_valuation.py  discrete_value_group.py  domains_with_valuation.py  function_field_valuation.py  (+22 more)
src/: .codespell-dictionary.txt  .codespell-ignore.txt  .gitignore  .hgignore  .pip-js-install.sh  .relint.yml  LICENSE.txt  MANIFEST.in  Makefile  Makefile.in  PKG-INFO  Pipfile.m4  README.rst  README.txt  VERSION.txt  boring  build.py  bundle  changes  cmfcore.tailor  commit  config  conftest.py  conftest_inputtest.py  conftest_test.py  environment-dev.yml  export  fpickle_setup.py  generate_py_source.mk  install  mercurial-howto.txt  module_list.py  new  notes.txt  pull  pyproject.toml.m4  requirements.txt.m4  sage-push  sagebuild.py  setup.cfg  (+10 more)
src/c_lib/: .gitignore  ChangeLog  Makefile.am  Makefile.in  SConstruct  ZZ_pylong.cpp  aclocal.m4  ccobject.h  configure  configure.in  gmp_globals.c  interrupt.c  interrupt.h  libcsage.dylib  ltmain.sh  mpz_pylong.h  ntl_wrap.cpp  ntl_wrap.h  pb_wrap.h  stdsage.c  stdsage.h
src/c_lib/include/: ZZ_pylong.h  ccobject.h  convert.h  ginac_wrap.h  gmp_globals.h  interrupt.h  memory.h  mpn_pylong.h  mpz_longlong.h  mpz_pylong.h  ntl_wrap.h  parisage.h  pb_wrap.h  stdsage.h
src/c_lib/src/: ZZ_pylong.cc  ZZ_pylong.cpp  ccobject.h  convert.c  gmp_globals.c  interrupt.c  memory.c  mpn_pylong.c  mpz_longlong.c  mpz_pylong.c  ntl_wrap.cc  ntl_wrap.cpp  ntl_wrap.h  stdsage.c
src/debian/: check-use-debian.pl  control.in  rules  sage  sagemath.install
src/doc/: .gitignore  Makefile  bootstrap  new  sage-darcs-howto.txt
src/doc/common/: build_options.py  builder.py  conf.py  custom-sphinx-build.py  inventory_builder.py  macros.tex  multidocs.py  python.inv  python2.inv  python3.inv  sage_autodoc.py  update-python-inv.sh
src/ext/: .hgignore  mirror  sage-push  spkg-debian  spkg-dist  spkg-install
src/ext/doctest/: python3-known-passing.txt
src/ext/gap/: console.g  sage.g
src/ext/graphs/: graph_plot_js.html
src/ext/magma/: spec
src/ext/mwrank/: PRIMES
src/ext/nbconvert/: postprocess.py  rst_sage.tpl
src/ext/pickle_jar/: pickle_jar.tar.bz2
src/ext/sagebuild/: build.py  clib.py  sagebuild.py  sageenv.py
src/ext/singular/: rrbasis.lib  sage.lib
src/ext/texlive/: SPKG.txt  package-list.txt  texlive-install
src/ext/threejs/: threejs_template.html
src/ext/valgrind/: pyalloc.supp  sage-additional.supp  sage.supp
src/lib/pkgconfig/: .gitignore
src/mac-app/: .gitignore  AppController.h  AppController.m  AppDelegate.h  AppDelegate.m  Defaults.plist  InputPanelController.h  InputPanelController.m  Makefile  MyDocument.h  MyDocument.m  PreferencePanelController.h  PreferencePanelController.m  Sage-Info.plist  appl.icns  loading-page.html  open-location.sh  sage-README-macOS.txt  sage-document-cython.icns  sage-document-py.icns  sage-document-sage.icns  sage-document-spkg.icns  sage-is-running-on-port.sh  start-sage.sh
src/mac-app/English.lproj/: Credits.html
src/mac-app/Sage.xcodeproj/: project.pbxproj
src/mac-app/tools/: arrangeIcons.applescript
src/sage/: .gitignore  __init__.py  all.py  all__sage_categories.py  all__sage_objects.py  all__sagemath_categories.py  all__sagemath_environment.py  all__sagemath_objects.py  all__sagemath_repl.py  all_cmdline.py  all_notebook.py  catalogue.py  env.py  env.py.in  version.py
src/sage/algebras/: affine_nil_temperley_lieb.py  algebra.py  algebra_element.py  algebra_ideal.py  algebra_ideal_element.py  algebra_order.py  algebra_order_element.py  algebra_order_frac_ideal.py  algebra_order_ideal.py  algebra_order_ideal_element.py  all.py  ariki_koike_algebra.py  askey_wilson.py  associated_graded.py  catalog.py  cellular_basis.py  clifford_algebra.py  clifford_algebra_element.pxd  clifford_algebra_element.pyx  cluster_algebra.py  commutative_algebra.py  commutative_algebra_element.py  commutative_dga.py  commutative_graded_algebra.py  commutative_graded_algebra_finite.py  exterior_algebra_cython.pxd  exterior_algebra_cython.pyx  exterior_algebra_groebner.pxd  exterior_algebra_groebner.pyx  finite_dimensional_graded_algebra.py  finite_gca.py  free_algebra.py  free_algebra_element.py  free_algebra_quotient.py  free_algebra_quotient_element.py  free_zinbiel_algebra.py  group_algebra.py  group_algebra_new.py  hall_algebra.py  invariants.py  (+30 more)
src/sage/arith/: all.py  constants.pxd  functions.pxd  functions.pyx  long.pxd  misc.py  multi_modular.pxd  multi_modular.pyx  numerical_approx.pxd  numerical_approx.pyx  power.pxd  power.pyx  rational_reconstruction.pxd  rational_reconstruction.pyx  srange.pyx
src/sage/calculus/: all.py  calculus.py  desolvers.py  equations.py  functional.py  functions.py  integration.pyx  interpolation.pxd  interpolation.pyx  interpolators.pyx  notes.txt  ode.pyx  parser.pyx  predefined.py  riemann.pyx  test_sympy.py  tests.py  todo.txt  var.pyx  wester.py
src/sage/catalogue/: all.py  catalogue.py
src/sage/categories/: __init__.py  action.pxd  action.pyx  additive_groups.py  additive_magmas.py  additive_monoids.py  additive_semigroups.py  affine_derived_crystals.py  affine_weyl_groups.py  algebra_functor.py  algebra_ideals.py  algebra_modules.py  algebras.py  (+201 more)
src/sage_bootstrap/: README  sage-bootstrap  setup.py
src/sage_docbuild/: __init__.py  __main__.py  build_options.py  builders.py  conf.py  sphinxbuild.py  utils.py
src/sage_setup/: .gitignore  clean.py  cython_options.py  excepthook.py  extensions.py  find.py  library_order.py  optional_extension.py  run_parallel.py  setenv.py  util.py
(+6785 files in other folders)
